# EventNotify

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
app/: Makefile  check_bot.py  main.py
app/api/: api_kuda_go.py  api_telegram_bot.py
app/api_event/: api_kuda_go.py
app/api_telegram/: api_telegram_bot.py
app/app_database/: crud.py
reports/: 000_договорённости по задаче  001_install_python.md  003_install_vs_code.md  003_record.md  004_config_tunnel.md  004_record.md  005_record.md  006_create_tg_bot.md  record_001.md  record_002.md  record_003.md  record_005.md
