[project]
name = "eventnotify"
version = "1.0.0"
description = "Уведомления в ТГ бот о текущих событиях: кино, мероприятия, концерты"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.1",
    "flask>=3.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
